<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".member.SignUpFragment">

    <EditText
        android:id="@+id/signUp_editTextAccount"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/editText_account_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUp_edittextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/editText_password_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/signUp_editTextNickname"
        app:layout_constraintStart_toStartOf="@+id/signUp_editTextNickname"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editTextNickname" />

    <EditText
        android:id="@+id/signUp_editTextPasswordAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/editText_passwordAgain_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/signUp_edittextPassword"
        app:layout_constraintStart_toStartOf="@+id/signUp_edittextPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUp_edittextPassword" />

    <EditText
        android:id="@+id/signUp_editTextNickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/editText_nickname_hint"
        android:inputType="textPersonName"
        android:maxLength="16"
        app:layout_constraintEnd_toEndOf="@+id/signUp_editTextAccount"
        app:layout_constraintStart_toStartOf="@+id/signUp_editTextAccount"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editTextAccount" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textView_nicknameLimit"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/signUp_editTextNickname"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editTextNickname" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textView_passwordLimit"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/signUp_edittextPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUp_edittextPassword" />

    <Button
        android:id="@+id/signUp_buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/button_signUp"
        app:layout_constraintEnd_toEndOf="@+id/signUp_editTextPasswordAgain"
        app:layout_constraintStart_toStartOf="@+id/signUp_editTextPasswordAgain"
        app:layout_constraintTop_toBottomOf="@+id/signUp_editTextPasswordAgain" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:text="@string/textView_signProtocol"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/signUp_buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/signUp_buttonSignUp" />

    <TextView
        android:id="@+id/signUp_textViewTermsOfService"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textView_signTermsOfService"
        android:textColor="@color/blue2"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/signUp_textViewPrivacyPolicy"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textView_signPrivacyPolicy"
        android:textColor="@color/blue2"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/textView_signAnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/signUp_textViewTermsOfService"
        app:layout_constraintStart_toEndOf="@+id/signUp_textViewTermsOfService"
        app:layout_constraintTop_toTopOf="@+id/signUp_textViewTermsOfService" />
</androidx.constraintlayout.widget.ConstraintLayout>