<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        android:paddingStart="5dp"
        android:paddingTop="8dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/writePost_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edittext_background"
            android:entries="@array/postTypeOnWritePost"
            android:padding="10dp"
            android:popupBackground="@drawable/edittext_background"
            app:layout_constraintBottom_toBottomOf="@+id/writePost_editTextTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/writePost_editTextTitle" />

        <EditText
            android:id="@+id/writePost_editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/editText_title_hint"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/writePost_editTextContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/editText_content_hint"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/writePost_editTextTitle" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/textView_type"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/writePost_spinner"
            app:layout_constraintEnd_toStartOf="@+id/writePost_spinner"
            app:layout_constraintTop_toTopOf="@+id/writePost_spinner" />

        <ProgressBar
            android:id="@+id/writePost_progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.684" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/writePost_buttonAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_addImage"
            app:layout_constraintBottom_toBottomOf="@+id/writePost_buttonSubmit"
            app:layout_constraintEnd_toStartOf="@+id/writePost_buttonCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/writePost_buttonSubmit"
            app:layout_constraintTop_toTopOf="@+id/writePost_buttonSubmit" />

        <Button
            android:id="@+id/writePost_buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/writePost_buttonAddImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <Button
            android:id="@+id/writePost_buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/writePost_buttonAddImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/writePost_buttonAddImage"
            app:layout_constraintTop_toTopOf="@+id/writePost_buttonAddImage" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/writePost_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/writePost_imageView"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />

                <TextView
                    android:id="@+id/writePost_textViewAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textView_addImage"
                    android:textSize="24sp" />

            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>